--- a/frontend/src/app/modules/comanda/comanda.component.html
+++ b/frontend/src/app/modules/comanda/comanda.component.html
@@ -1,4 +1,4 @@
 <app-toolbar toolbarTitle="Comandas" [actions]="actions" style="text-align: center;"></app-toolbar>
-<div class="content" [@fadeIn]>
+<div class="content" [@fadeIn] *ngIf="isLoaded">
     <app-card-comanda [comanda]="comanda" *ngFor="let comanda of comandas"></app-card-comanda>
 </div>
