fix: change color to yellow

--- a/frontend/src/app/modules/comanda/comanda.component.scss
+++ b/frontend/src/app/modules/comanda/comanda.component.scss
@@ -14,7 +14,7 @@
 }
 
 .spinner > div {
-    background-color: #FFD700;
+    background-color: yellow;
     height: 100%;
     width: 6px;
     display: inline-block;
