--- a/frontend/src/app/modules/comanda/comanda.component.html
+++ b/frontend/src/app/modules/comanda/comanda.component.html
@@ -1,15 +1,5 @@
 <app-toolbar toolbarTitle="Comandas" [actions]="actions" style="text-align: center;"></app-toolbar>
-
-<div style="width: 100%; display: flex; justify-content: center; height: 100%; align-items: center;">
-    <div class="spinner" *ngIf="isLoading">
-        <div class="rect2"></div>
-        <div class="rect3"></div>
-        <div class="rect4"></div>
-        <div class="rect5"></div>
-    </div>
-</div>
-
-
+<app-spinner-default [isLoading]="isLoading"></app-spinner-default>
 <div class="content" [@fadeIn] *ngIf="isLoaded">
     <app-card-comanda [comanda]="comanda" *ngFor="let comanda of comandas"></app-card-comanda>
 </div>
