--- a/frontend/src/app/modules/shared/spinner-default/spinner-default.component.html
+++ b/frontend/src/app/modules/shared/spinner-default/spinner-default.component.html
@@ -1,5 +1,5 @@
-<div style="width: 100%; display: flex; justify-content: center; height: 100%; align-items: center;">
-    <div class="spinner" *ngIf="isLoading">
+<div style="width: 100%; display: flex; justify-content: center; height: 100%; align-items: center;" *ngIf="isLoading">
+    <div class="spinner">
         <div class="rect2"></div>
         <div class="rect3"></div>
         <div class="rect4"></div>
