feat: add spinner before some modules that I didn't need right now especify to prove nothing to anyone

--- a/frontend/src/app/modules/compras/compras.component.html
+++ b/frontend/src/app/modules/compras/compras.component.html
@@ -1,4 +1,4 @@
-<div [@fadeIn]>
-    <app-toolbar [actions]="actions"  [toolbarTitle]="toolbarTitle"></app-toolbar>
-    <app-table-pagination-compras></app-table-pagination-compras>
-</div>
+<app-toolbar [@fadeIn] [actions]="actions" [toolbarTitle]="toolbarTitle"></app-toolbar>
+<app-spinner-default [@fadeIn] [isLoading]="isLoading"></app-spinner-default>
+<app-table-pagination-compras [@fadeIn] *ngIf="isLoaded" [comprasData]="comprasData"
+    [dataSource]="dataSource"></app-table-pagination-compras>
