--- a/frontend/src/app/modules/caixa/table-pagination-caixa/table-pagination-caixa.component.html
+++ b/frontend/src/app/modules/caixa/table-pagination-caixa/table-pagination-caixa.component.html
@@ -18,7 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef class="thCell">DataHora</th>
                 <td mat-cell *matCellDef="let caixa">
                     <p class="pValueTable">
-                        {{caixa.data_hora}}</p>
+                        {{formatarData(caixa.data_hora)}}</p>
                 </td>
             </ng-container>
 
