--- a/frontend/src/app/modules/cliente/table-pagination-clientes/table-pagination-clientes.component.html
+++ b/frontend/src/app/modules/cliente/table-pagination-clientes/table-pagination-clientes.component.html
@@ -48,7 +48,7 @@
             </ng-container>
 
             <ng-container matColumnDef="detalhes">
-                <th mat-header-cell *matHeaderCellDef class="thCell">Detalhes</th>
+                <th mat-header-cell *matHeaderCellDef class="thCell">Ação</th>
                 <td mat-cell class="actionsButtons" *matCellDef="let cliente">
                     <div class="pValueTable">
                         <button class="detalhesCliente" (click)="openDialogDetalhesCliente(cliente)">
