--- a/frontend/src/app/modules/compras/table-pagination-compras/table-pagination-compras.component.html
+++ b/frontend/src/app/modules/compras/table-pagination-compras/table-pagination-compras.component.html
@@ -43,7 +43,7 @@
 
 
             <ng-container matColumnDef="detalhes">
-                <th mat-header-cell *matHeaderCellDef class="thCell">Detalhes</th>
+                <th mat-header-cell *matHeaderCellDef class="thCell">Ação</th>
                 <td mat-cell class="actionsButtons" *matCellDef="let compra">
                     <div class="pValueTable">
                         <button class="detalhesProduto" (click)="openDialogDetalhesProduto(compra)">
