--- a/frontend/src/app/modules/vendas/table-pagination-vendas/table-pagination-vendas.component.html
+++ b/frontend/src/app/modules/vendas/table-pagination-vendas/table-pagination-vendas.component.html
@@ -52,7 +52,7 @@
 
 
             <ng-container matColumnDef="detalhes">
-                <th mat-header-cell *matHeaderCellDef class="thCell">Detalhes</th>
+                <th mat-header-cell *matHeaderCellDef class="thCell">Ação</th>
                 <td mat-cell class="actionsButtons" *matCellDef="let venda">
                     <div style="display:flex; justify-content:center">
                         <button class="detalhesProduto" (click)="openDialogDetalhesVenda(venda)">
