--- a/frontend/src/app/modules/cliente/detalhes-cliente/table-pagination-vendas-clientes/table-pagination-vendas-clientes.component.html
+++ b/frontend/src/app/modules/cliente/detalhes-cliente/table-pagination-vendas-clientes/table-pagination-vendas-clientes.component.html
@@ -52,7 +52,7 @@
 
 
             <ng-container matColumnDef="detalhes">
-                <th mat-header-cell *matHeaderCellDef class="thCell">Detalhes</th>
+                <th mat-header-cell *matHeaderCellDef class="thCell">Ação</th>
                 <td mat-cell class="actionsButtons" *matCellDef="let venda">
                     <div class="pValueTable">
                         <button class="detalhesProduto" (click)="openDialogDetalhesVenda(venda)">
