--- a/frontend/src/app/modules/produtos/dialog-edit-produto/dialog-edit-produto.component.scss
+++ b/frontend/src/app/modules/produtos/dialog-edit-produto/dialog-edit-produto.component.scss
@@ -31,3 +31,91 @@ mat-form-field {
         color: #fff;
     }
 }
+
+
+
+
+.file-upload {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 300px;
+    /* Defina uma largura fixa ou ajuste conforme necessário */
+    height: 150px;
+    /* Defina uma altura fixa ou ajuste conforme necessário */
+    border: 4px dashed #121212;
+    /* Cor da borda */
+    border-radius: 10px;
+    background: #ecf0f1;
+    /* Cor de fundo */
+    transition: border .3s ease;
+
+    margin: 0 auto;
+}
+
+.file-uploaded {
+    width: max-content;
+    /* Defina uma largura fixa ou ajuste conforme necessário */
+    height: max-content;
+    // mat-card {
+    //     padding: 1rem;
+    // }
+
+    /* Defina uma altura fixa ou ajuste conforme necessário */
+}
+
+.file-uploadedContent {
+    // display: flex;
+    // justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    gap: 2rem;
+    // margin: 2rem;
+}
+
+.atualFotoProduto {
+  margin: 2rem;
+}
+
+.file-upload:hover {
+    border-color: #121212b2;
+    /* Cor da borda ao passar o mouse */
+}
+
+.file-upload input[type="file"] {
+    display: none;
+    /* Esconde o input padrão de arquivo */
+}
+
+.file-upload label {
+    display: block;
+    cursor: pointer;
+    padding: 20px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: #7f8c8d;
+    /* Cor do texto */
+}
+
+.file-upload label:hover {
+    color: #34495e;
+    border: 2px dashed #ccc;
+    padding: 20px;
+    text-align: center;
+}
+
+
+
+.foto-selecionada {
+
+    border: 2px solid #4CAF50;
+    background-color: #f2f2f2;
+}
+
+
+.upload-label {
+    font-size: 16px;
+}
