--- a/frontend/src/app/modules/shared/spinner-default/spinner-default.component.html
+++ b/frontend/src/app/modules/shared/spinner-default/spinner-default.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; display: flex; justify-content: center; height: 100%; align-items: center;" *ngIf="isLoading">
+<div  class="loading-overlay" style="width: 100%; display: flex; justify-content: center; height: 100%; align-items: center;" *ngIf="isLoading">
     <div class="spinner">
         <div class="rect2"></div>
         <div class="rect3"></div>
