--- a/frontend/src/app/modules/shared/spinner-default/spinner-default.component.scss
+++ b/frontend/src/app/modules/shared/spinner-default/spinner-default.component.scss
@@ -1,5 +1,17 @@
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
 .spinner {
-    margin: 100px auto;
     width: 50px;
     height: 40px;
     text-align: center;
@@ -11,7 +23,6 @@
     height: 100%;
     width: 6px;
     display: inline-block;
-
     -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
     animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
@@ -41,11 +52,11 @@
     0%,
     40%,
     100% {
-        -webkit-transform: scaleY(0.4)
+        -webkit-transform: scaleY(0.4);
     }
 
     20% {
-        -webkit-transform: scaleY(1.0)
+        -webkit-transform: scaleY(1.0);
     }
 }
 
