--- a/frontend/src/app/modules/vendas/dialog-nova-venda/dialog-nova-venda.component.html
+++ b/frontend/src/app/modules/vendas/dialog-nova-venda/dialog-nova-venda.component.html
@@ -49,7 +49,7 @@
                             <ng-container matColumnDef="quantidade">
                                 <th mat-header-cell *matHeaderCellDef>Qtd</th>
                                 <td mat-cell *matCellDef="let item">
-                                    <input type="text" style="max-width: 40px;" [value]="" (input)="onInput($event)"
+                                    <input type="text" style="max-width: 40px;" [value]=""
                                         (change)="changeQuantidadeItens($event,item.produto.id)">
                                 </td>
                             </ng-container>
