chore: edit img in fotoAtual in edit page product

--- a/frontend/src/app/modules/produtos/dialog-edit-produto/dialog-edit-produto.component.scss
+++ b/frontend/src/app/modules/produtos/dialog-edit-produto/dialog-edit-produto.component.scss
@@ -76,7 +76,10 @@ mat-form-field {
 }
 
 .atualFotoProduto {
-  margin: 2rem;
+    margin: 2rem;
+    img{
+        object-fit: contain;
+    }
 }
 
 .file-upload:hover {
