fix: change the filter from keyup to input

--- a/frontend/src/app/modules/produtos/table-pagination-produto/table-pagination-produto.component.html
+++ b/frontend/src/app/modules/produtos/table-pagination-produto/table-pagination-produto.component.html
@@ -2,7 +2,7 @@
     <mat-card-content>
         <mat-form-field>
             <mat-label>Buscar Produto</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Pesquisar" #input>
+            <input matInput (input)="applyFilter($event)" placeholder="Pesquisar" #input>
         </mat-form-field>
 
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
